Fixes text legibility

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1086,6 +1086,11 @@ dialog {
     margin-bottom: 1rem;
     padding-bottom: 0.25rem;
 }
+
+#button-documentation {
+    color: #000;
+}
+
 .tab_sponsor {
     min-height: 60px;
 }
@@ -1304,7 +1309,7 @@ dialog {
     gap: 0.5rem;
 }
 .gui_box_titlebar {
-    color: var(--surface-100);
+    color: #000;
     background-color: var(--primary-500);
     position: absolute;
     font-size: 13px;
